--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -76,7 +76,7 @@
 	height: 350px;
 	overflow: auto;
 	background-color: white;
-	border: solid 2px darkgrey;
+	border: solid 2px grey;
 	border-radius: 5px;
 }
 
@@ -95,11 +95,12 @@
 	height: 400px;
 	border: solid 2px grey;
 	background-color: white;
+  border-radius: 5px;
 }
 
 .wrap {
 	border-radius: 5px;
-	border: solid 1px #000;
+	border: solid 1px grey;
 }
 #icons {
 width: 140%;
